--- a/index.html
+++ b/index.html
@@ -38,25 +38,17 @@
                     </div>
                 </div>
 
-                <!-- ML Frameworks -->
+                <!-- libraries or Tools -->
                 <div class="skill-category">
-                    <h3><i class="fas fa-brain"></i> ML & DL Frameworks</h3>
-                    <div class="badges">
-                        <span class="badge">TensorFlow</span>
-                        <span class="badge">Scikit-learn</span>
-                    </div>
-                </div>
-
-                <!-- Data Tools -->
-                <div class="skill-category">
-                    <h3><i class="fas fa-database"></i> Tools & Libraries</h3>
+                    <h3><i class="fas fa-database"></i> Libraries</h3>
                     <div class="badges">
                         <span class="badge">Pandas</span>
                         <span class="badge">NumPy</span>
                         <span class="badge">Matplotlib</span>
                         <span class="badge">Flask</span>
                         <span class="badge">OpenCV</span>
-
+                        <span class="badge">TensorFlow</span>
+                        <span class="badge">Scikit-learn</span>
                     </div>
                 </div>
 
