update photo profile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header class="hero">
         <div class="container">
-            <img src="assets/profile.png" alt="Profile Picture" class="profile-pic" />
+            <img src="assets/profile.jpg" alt="Profile Picture" class="profile-pic" />
             <h1>Hai, I'm Sep Sarip Hidayattuloh</h1>
             <p>Machine Learning | Software Development Enthusiast</p>
             <a href="#projects" class="btn">View Projects</a>
